增加生成访客文档
